--- a/package.json
+++ b/package.json
@@ -10,13 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-<<<<<<< HEAD
-    "sass": "^1.69.3"
-=======
     "sass": "^1.69.4"
->>>>>>> 1992f87f47ed3c20b5a3987ed003448434b8aa78
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
